Fix Expand Mode and scrollbar

--- a/SNotes/Content/Site.css
+++ b/SNotes/Content/Site.css
@@ -3,6 +3,7 @@
     padding-bottom: 20px;
     /*background: rgb(238, 238, 238);*/
     background: #f2f2f2;
+    
 }
 
 /* Set padding to keep content from hitting the edges #e8e8e8;*/
@@ -36,23 +37,53 @@
     /*display: none;*/
 }
 
+
+
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 5px;
 }
+
+::-webkit-scrollbar-track-piece {
+    visibility: hidden;
+}
+
 
 ::-webkit-scrollbar-thumb {
     border-radius: 5px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 
-.noteContent ::-webkit-scrollbar {
-    /*width: 0;
-    background: transparent;*/
+/*html, body{
+    
+    scrollbar-base-color: red;
+
+    scrollbar-face-color: red!important;
+    
+    scrollbar-3dlight-color: #C0C0C0;
+    
+    scrollbar-highlight-color: #C0C0C0;
+
+    scrollbar-track-color: #FF0080 !important;
+    
+    scrollbar-arrow-color: black;
+    
+    scrollbar-shadow-color: #C0C0C0;
+    
+    /*scrollbar-dark-shadow-color: #C0C0C0;*/
+    
+}*/
+
+
+
+.expandEditableDivs {
+    overflow-y: scroll !important;
 }
 
-.expand ::-webkit-scrollbar {
+.expandEditableDivs::-webkit-scrollbar {
     width: 12px;
+    display: block !important;
+   
 }
 
 .expand::-webkit-scrollbar-track {
@@ -83,7 +114,7 @@
     margin-left: -30vw;
     z-index: 100;
     width: 60vw;
-    height: 85vh;
+    height: 87vh;
     transition: 0.2s ease-in-out;
     transform: rotate(360deg);
     animation-direction: alternate;
@@ -97,8 +128,19 @@
 
 
 
-.expand > .editableDivs {
-    overflow-y: scroll;
+.expand .noteFooter {
+    height: 28px;
+    font-size: 18px;
+    
+}
+
+.expand .footerIcons {
+    font-size: 18px;   
+}
+
+.expand .time {
+    right: 20px;
+    font-size: 16px;
 }
 
 /*.editableDivs::-webkit-scrollbar { 
@@ -152,7 +194,7 @@ textarea {
 }
 
 
-#editableDivsMainView::-webkit-scrollbar { 
+.editableDivsMainView::-webkit-scrollbar { 
     display: none; 
 }
 
@@ -256,7 +298,7 @@ textarea {
 
 .notesListContainer::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-   
+    visibility: hidden;
 }
 
 .notesListContainer::-webkit-scrollbar-thumb {
@@ -266,6 +308,8 @@ textarea {
     background: red;
    
 }
+
+
 
 .notes {
     margin-top: -14px;
@@ -334,20 +378,31 @@ textarea {
 }
 
 .editLabelInPartial {
-    color: #303F9F; 
+    color: #303F9F;
     font-size: 12px; 
     padding: 0 5px 0 5px;
     display: none;
-    
+    outline: none;
+    text-decoration: none;
    
    
 }
 
-.deleteLabelInPartial {
+.editLabelInPartial:hover {
     color: red;
+    font-weight: bold;
+}
+
+.deleteLabelInPartial {
+    color: #303F9F;
     font-size: 12px;
     display: none;
 
+}
+
+.deleteLabelInPartial:hover {
+    color: red;
+    
 }
 
 
@@ -361,9 +416,19 @@ textarea {
     color: #555555;
     font-size: 16px;
     font-family: 'Roboto Slab','Times New Roman',serif;
+    text-decoration: none;
     /*font-family: 'Roboto,RobotoDraft,Helvetica,Arial',sans-serif;*/
     
 }
+
+    .labelNamesInPartial:hover {
+        
+        text-decoration: none !important;
+       
+        
+    }
+
+
 
 
 
@@ -560,7 +625,7 @@ textarea {
     position: absolute;
     bottom: 40px;
     right: 5px;
-    width: 50%;
+   
     opacity:0.8;
     display: none;
 
@@ -599,7 +664,13 @@ textarea {
 }
 
 
+#labelPartialTools  {
+    color: #303F9F;
+}
 
+#labelPartialTools a:hover  {
+   
+}
 
 
 
